# nike

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_cmake.yml
apps/: CMakeLists.txt
apps/app1/: CMakeLists.txt  main.cpp
apps/nike-app/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/include/nike/: closure.hpp  core.hpp  core_base.hpp  eval.hpp  graph.hpp  input_output_partition.hpp  multithreaded.hpp  one_step_realizability.hpp  one_step_unrealizability.hpp  path.hpp  statistics.hpp  strategy.hpp  strip_next.hpp  to_bdd.hpp  to_ltlf.hpp  to_pl.hpp  to_zdd.hpp  xnf.hpp
libs/core/include/nike/one_step_realizability/: base.hpp  bdd.hpp  smt.hpp
libs/core/src/: closure.cpp  core.cpp  core_base.cpp  eval.cpp  graph.cpp  input_output_partition.cpp  multithreaded.cpp  one_step_realizability.cpp  one_step_unrealizability.cpp  path.cpp  statistics.cpp  strategy.cpp  strip_next.cpp  to_bdd.cpp  to_ltlf.cpp  to_pl.cpp  to_zdd.cpp  xnf.cpp
libs/core/src/one_step_realizability/: base.cpp  bdd.cpp  smt.cpp
libs/core/tests/: CMakeLists.txt
libs/core/tests/integration/: integration_tests_utils.hpp  test_datasets.cpp
libs/core/tests/unit/: main.cpp  test_closure.cpp  test_cudd.cpp  test_eval.cpp  test_glucose.cpp  test_iopartition.cpp  test_xnf.cpp  test_z3.cpp
libs/core/tests/unit/test_core/: core_test_utils.hpp  test_complex_formulas.cpp  test_core_basic_formulas.cpp  test_one_step_realizability.cpp
libs/lib1/: CMakeLists.txt
libs/lib1/include/my_cmake_template/: lib1.hpp
libs/lib1/src/: lib1.cpp
libs/lib1/tests/: CMakeLists.txt
libs/lib1/tests/unit/: main.cpp
libs/lib2/: CMakeLists.txt
libs/lib2/include/my_cmake_template/: lib2.hpp
libs/lib2/src/: lib2.cpp
libs/lib2/tests/: CMakeLists.txt
libs/lib2/tests/unit/: main.cpp
libs/logic/: CMakeLists.txt
libs/logic/include/nike/logic/: atom_visitor.hpp  base.hpp  comparable.hpp  copy.hpp  duality.hpp  eval.hpp  hashable.hpp  hashtable.hpp  ltlf.hpp  metadata.hpp  nnf.hpp  pl.hpp  print.hpp  replace.hpp  size.hpp  types.hpp  utils.hpp  visitable.hpp  visitor.hpp
libs/logic/src/: atom_visitor.cpp  base.cpp  copy.cpp  duality.cpp  eval.cpp  ltlf.cpp  nnf.cpp  pl.cpp  print.cpp  replace.cpp  size.cpp
libs/logic/tests/: CMakeLists.txt
libs/logic/tests/unit/: main.cpp  test_copy.cpp  test_find_atoms.cpp  test_hashtable.cpp  test_ltlf.cpp  test_nnf.cpp  test_size.cpp
libs/parser/: CMakeLists.txt
libs/parser/include/nike/parser/: abstract_driver.hpp  driver.hpp  lexer.l  parser.yy  parser_stype.h  scanner.hpp  scanner_internal.hpp
libs/parser/src/: driver.cpp
libs/parser/tests/: CMakeLists.txt
libs/parser/tests/unit/: main.cpp
libs/search/: CMakeLists.txt
libs/search/include/nike/search/: base_graph.hpp  simple_graph.hpp  uniform.hpp
libs/search/src/: search.cpp
libs/search/tests/: CMakeLists.txt
libs/search/tests/unit/: main.cpp
libs/utils/: CMakeLists.txt
libs/utils/include/nike/: logger.hpp  shared_queue.hpp  utils.hpp
libs/utils/src/: logger.cpp  utils.cpp
libs/utils/tests/: CMakeLists.txt
libs/utils/tests/unit/: main.cpp  test_logger.cpp
scripts/: _ci-install-dependencies-ubuntu.sh  _ci-test.sh  check_copyright_notice.py  nike-output-parser.py  parallel-nike  run-clang-format.py
